adding front end

--- a/home.html
+++ b/home.html
@@ -1,18 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Milestone 1</title>
+    <title>Milestone 2</title>
 	<!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 <body>
-    <nav class="navbar navbar-light bg-light fixed-top">
-  <a class="navbar-brand">Temp Navbar For Now</a>
-  <form class="form-inline">
-    <button class="btn btn-outline-success my-2 my-sm-0" id ="logoutbtn">Logout</button>
-  </form>
-    </nav>
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Tweeter</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="/user">Profile<span class="sr-only">(current)</span></a>
+            </li>
+          </ul>
+          <form class="form-inline my-2 my-lg-0">
+            <button class="btn btn-outline-danger my-2 my-sm-0" id="logoutbtn">Logout</button>
+          </form>
+        </div>
+      </nav>
     <br>
     <br>
     <br>
@@ -34,6 +45,15 @@
         </div>
       </div>
       <br>
+      <div class="card" style = "width: 40%; float: left; margin-left: 5%; margin-right:10%">
+        <h5 class="card-header">Tweet Something!</h5>
+        <div class="card-body">
+            <h5 class="card-title">Tweet Id to delete:</h5>
+            <input type="text" placeholder="Your tweet id to delete" id="deleteId">
+            <h5 class="card-title">Status:<span id="deleteStatus"></span></h5>
+          <a class="btn btn-primary" id="contentSubmit" style="color: white;">Submit!</a>
+        </div>
+      </div>
       <div class="card" style = "width: 40%">
             <h5 class="card-header">Search:</h5>
             <div class="card-body">
@@ -41,7 +61,14 @@
               <input type="number" placeholder="In Unix Time" style="margin-bottom: 15px;" id="sTimestamp">
               <h5 class="card-title">Limit:</h5>
               <input type="number" placeholder="number of max results" id="sLimit">
+              <h5 class="card-title">Query:</h5>
+              <input type="texts" placeholder="What content?" id="query">
               <br>
+              <h5 class="card-title">Username:</h5>
+              <input type="text" placeholder="Username" id="susername">
+              <br>
+              <h5 class="card-title">following:</h5>
+              <input type="checkbox" id="sfollowing" checked>
               <br>
               <a class="btn btn-primary" style="color: white;" id="searchBtn">Search</a>
             </div>
@@ -78,7 +105,7 @@
                     let limit = $("#sLimit").val();
                     let search = {
                         timestamp: timestamp,
-                        limit: limit
+                        limit: limit,
                     };
                     $('#searchBody').empty();
                     $.post("/search", search).then((resp)=>{
