--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         <div class = "row">
                 <div class="col-sm-12 text-center">
             <button id ="search">Search Stuff</button>
+            <button id ="users">Find Users</button>
         </div>
         </div>
      
@@ -103,6 +104,10 @@
 
                 $("#search").on("click",event=>{
                     window.location.assign("/home");
+                })
+
+                $("#users").on("click",event=>{
+                    window.location.assign("/user");
                 })
             })
         </script>
