--- a/home.html
+++ b/home.html
@@ -59,7 +59,7 @@
         <h5 class="card-header">Get Media with id!</h5>
         <div class="card-body">
           <label for="mediaId"><h5 class="card-title">ID:</h5></label>
-         <input type="text" id="tweetId">
+         <input type="text" id="mediaId">
           <a class="btn btn-primary" style="color: white;" id="getmedia">Submit</a>
         </div>
       </div>
@@ -87,7 +87,7 @@
         </div>
       </div>
 
-      <form method="POST" action="/" enctype="multipart/form-data">
+      <form method="POST" action="/addmedia" enctype="multipart/form-data">
         <div class="card" style = "width: 40%; float: left; margin-left: 5%; margin-right:10%">   
           <h5 class="card-header">Upload a File!</h5>
           <div class="card-body">  
