--- a/error.html
+++ b/error.html
@@ -19,7 +19,7 @@
         <h5 class="card-header">Get Media with id!</h5>
         <div class="card-body">
           <label for="mediaId"><h5 class="card-title">ID:</h5></label>
-         <input type="text" id="tweetId">
+         <input type="text" id="mediaId">
           <a class="btn btn-primary" style="color: white;" id="getmedia">Submit</a>
         </div>
       </div>
