--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <input name="username" id = "lusername">
                 <label for="password">Password: </label>
                 <input name="password" type="password" id = "lpassword">
-                <button type='submit' id="lsubmit">submit</button>
+                <button type='submit' id="lsubmit">Log in</button>
               </form>
               </div>
           </div>
@@ -35,7 +35,7 @@
                 <input name="email"  type="email" id = "semail">
                 <label for="name">Password: </label>
                 <input name="password" type="password" id = "spassword">
-                <button type='submit' id="ssubmit">submit</button>
+                <button type='submit' id="ssubmit">Register</button>
               </form>
        
             </div>
@@ -49,7 +49,7 @@
                 <input name="email" id="vemail">
                 <label for="key">Key: </label>
                 <input name="key" id="vkey" type="password">
-                <button type='submit' id="vsubmit">submit</button>
+                <button type='submit' id="vsubmit">Verify</button>
               </form>
               </div>
           </div>
